--- a/src/app/components/admin/raports/raports.component.html
+++ b/src/app/components/admin/raports/raports.component.html
@@ -15,26 +15,19 @@
       <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort>
    
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Nazwa Faktury</th>
-            <td mat-cell *matCellDef="let element"> {{element.name}}</td>
+          <ng-container matColumnDef="number">
+            <th mat-header-cell *matHeaderCellDef> Numer Faktury</th>
+            <td mat-cell *matCellDef="let element"> #{{element.number}}</td>
           </ng-container>
         
           <ng-container matColumnDef="owner">
-            <th mat-header-cell *matHeaderCellDef> Wystawione na</th>
+            <th mat-header-cell *matHeaderCellDef> Użytkownik</th>
             <td mat-cell *matCellDef="let element"> {{element.user.name}} {{element.user.lastname}}</td>
           </ng-container>
         
           <ng-container matColumnDef="apartment">
-            <th mat-header-cell *matHeaderCellDef> Wystawione na</th>
-            <td mat-cell *matCellDef="let element"> {{element.building.street}} {{element.building.buildingnumber}}/{{element.building.apartmentnumber}}</td>
-          </ng-container>
-        
-          
-        
-          <ng-container matColumnDef="number">
-            <th mat-header-cell *matHeaderCellDef> Numer Faktury</th>
-            <td mat-cell *matCellDef="let element"> {{element.number}} </td>
+            <th mat-header-cell *matHeaderCellDef> Lokal</th>
+            <td mat-cell *matCellDef="let element"> {{element.apartment.street}} {{element.apartment.buildingnumber}}/{{element.apartment.apartmentnumber}}</td>
           </ng-container>
         
           <ng-container matColumnDef="createdAt">
@@ -54,14 +47,25 @@
           </ng-container>
         
         
+          <ng-container matColumnDef="accept">
+            <th mat-header-cell *matHeaderCellDef>Akceptacja</th>
+            <td mat-cell *matCellDef="let element">
+              <button mat-icon-button (click)="acceptRaport(element.uid)">
+                <mat-icon class="mat-18">verified</mat-icon>
+              </button>
+            </td>
+          </ng-container>
+
           <ng-container matColumnDef="delete">
             <th mat-header-cell *matHeaderCellDef>Usuń</th>
             <td mat-cell *matCellDef="let element">
-              <button mat-icon-button color="warn" (click)="redirectToDelete(element.uid)">
+              <button mat-icon-button color="warn" (click)="redirectToDelete(element)">
                 <mat-icon class="mat-18">delete</mat-icon>
               </button>
             </td>
           </ng-container>
+
+          
         
       
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
