implement ng-zorro

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -39,4 +39,6 @@
   mat-sidenav-container {
     background-color: #fff;
     height: calc(100% - 75px);
+    background: url(../../src/assets/images/bg2.png);
+    background-repeat: round;
   }
