--- a/src/app/components/admin/raports/raports.component.html
+++ b/src/app/components/admin/raports/raports.component.html
@@ -3,7 +3,7 @@
 
     <div class="row">
   <div class="col-6 justify-content-md-center">
-      <mat-form-field fxFlex="60%" [style.margin-bottom]="'1em'">
+      <mat-form-field class="search-panel" fxFlex="60">
         <input #box matInput type="text" (keyup)="doFilter(box.value)" placeholder="Wyszukaj..">
       </mat-form-field>
   
