--- a/src/app/components/admin/apartments/apartments.component.html
+++ b/src/app/components/admin/apartments/apartments.component.html
@@ -2,8 +2,8 @@
 
 
     <div class="row">
-  <div class="col-6 justify-content-md-center">
-      <mat-form-field fxFlex="60%" [style.margin-bottom]="'1em'">
+  <div class="col-6 justify-content-md-center ">
+      <mat-form-field class="search-panel" fxFlex="60">
         <input #box matInput type="text" (keyup)="doFilter(box.value)" placeholder="Wyszukaj..">
       </mat-form-field>
   
