--- a/src/app/components/admin/apartments/apartments.component.scss
+++ b/src/app/components/admin/apartments/apartments.component.scss
@@ -3,6 +3,11 @@ table {
     overflow-x: auto;
     overflow-y: hidden;
     min-width: 500px;
+
+    th {
+      font-size: 14px;
+      color: #bbbbca;
+    }
   }
   th.mat-header-cell {
     text-align: left;
@@ -12,4 +17,14 @@ table {
   .mat-form-field {
     background-color: none !important;
   }
+
+  .search-panel {
+    background-color: #ffffffde;
+    padding: 10px 25px 10px 25px;
+    border: 1px solid #ddd;
+    border-radius: 15px;
+    box-shadow: 0px 10px 15px -3px rgb(0 0 0 / 10%);
+  }
+
+  
   
