--- a/src/app/components/admin/raports/raports.component.scss
+++ b/src/app/components/admin/raports/raports.component.scss
@@ -1,3 +1,11 @@
 .mat-table {
     width: 100%;
 }
+
+.search-panel {
+    background-color: #ffffffde;
+    padding: 10px 25px 10px 25px;
+    border: 1px solid #ddd;
+    border-radius: 15px;
+    box-shadow: 0px 10px 15px -3px rgb(0 0 0 / 10%);
+  }
