--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<mat-toolbar *ngIf="logged" color="primary" class="p-2">
+<div *ngIf="authService.isLoggedIn; else NOLOGGED" style="height: 100vh;">
+<mat-toolbar color="primary" class="p-2">
   <mat-toolbar-row>
     <button mat-icon-button fxShow="true" fxHide.gt-sm>
       <mat-icon>menu</mat-icon>
@@ -8,11 +9,11 @@
     <span class="menu-spacer"></span>
     <div fxShow="true" fxHide.lt-md>
 
-      <a routerLinkActive="active"mat-button [matMenuTriggerFor]="user" class="online_status"><mat-icon class="online_status mr-1" aria-hidden="false" aria-label="sensor_occupied">sensor_occupied</mat-icon> {{authService.userInfo.getValue().name}} {{authService.userInfo.getValue().lastname}}</a>
-      <mat-menu #user="matMenu">
-        <a mat-menu-item (click)="deleteUserComp()"><mat-icon aria-hidden="false" aria-label="sync_lock">delete</mat-icon>Usuń Konto</a>
-        <a mat-menu-item (click)="changePasswordUserComp()"><mat-icon aria-hidden="false" aria-label="sync_lock">sync_lock</mat-icon> Zmiana Hasła</a>
-      </mat-menu>
+      <a routerLinkActive="active"mat-button  class="online_status"><mat-icon class="online_status mr-1" aria-hidden="false" aria-label="sensor_occupied">sensor_occupied</mat-icon> Zalogowany: {{authService.userInfo.getValue().name}} {{authService.userInfo.getValue().lastname}}</a>
+      <!-- <mat-menu #user="matMenu">   [matMenuTriggerFor]="user"-->
+        <!-- <a mat-menu-item (click)="deleteUserComp()"><mat-icon aria-hidden="false" aria-label="sync_lock">delete</mat-icon>Usuń Konto</a>
+        <a mat-menu-item (click)="changePasswordUserComp()"><mat-icon aria-hidden="false" aria-label="sync_lock">sync_lock</mat-icon> Zmiana Hasła</a> -->
+      <!-- </mat-menu> -->
 
       
       <span *ngIf="(authService.userInfo.getValue().moderator); else NoMod">
@@ -26,12 +27,9 @@
         <a routerLinkActive="active" [routerLink]="['apartments']" mat-button><mat-icon aria-hidden="false" aria-label="domain">domain</mat-icon> Mieszkania</a>
         <a routerLinkActive="active" [routerLink]="['users']" mat-button><mat-icon aria-hidden="false" aria-label="supervisor_account">supervisor_account</mat-icon> Użytkownicy</a>
         <a routerLinkActive="active" [routerLink]="['payments']" mat-button><mat-icon aria-hidden="false" aria-label="payments">payments</mat-icon> Płatności</a>
-      </span>
-
-      <a routerLinkActive="active" [routerLink]="['chat']" mat-button><mat-icon aria-hidden="false" aria-label="chat">chat</mat-icon> Czat</a>
-      
+      </span>      
       <ng-template #NoMod>
-        <a routerLinkActive="active" [routerLink]="['user/raports']" mat-button><mat-icon aria-hidden="false" aria-label="ballot">ballot</mat-icon> Moje Raporty</a>
+        <a routerLinkActive="active" [routerLink]="['user/raports']" mat-button><mat-icon aria-hidden="false" aria-label="ballot">ballot</mat-icon> Moje Rozliczenia</a>
       </ng-template>
 
       <a [routerLink]="['/']" mat-button><mat-icon aria-hidden="false" aria-label="bento">bento</mat-icon> Panel</a>
@@ -40,13 +38,9 @@
   </mat-toolbar-row>
 </mat-toolbar>
 
-
-
-
 <mat-sidenav-container>
 <mat-sidenav #sidenav>
   <mat-nav-list>
-
     <a href="/" mat-list-item>Panel</a>
     <a (click)="sidenav.toggle()" href="" mat-list-item>Zamknij</a>
   </mat-nav-list>
@@ -55,3 +49,6 @@
   <router-outlet></router-outlet>
 </mat-sidenav-content>
 </mat-sidenav-container>
+</div>
+
+<ng-template #NOLOGGED><router-outlet></router-outlet></ng-template>
