--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,7 +24,7 @@
   }
 
   mat-toolbar {
-    height: 75px;
+    height: 80;
     background-image: linear-gradient(169deg, #5983fc 16%, #1e50c8 89%) !important;
 
     a:hover {
@@ -38,7 +38,9 @@
   
   mat-sidenav-container {
     background-color: #fff;
-    height: calc(100% - 75px);
+    height: calc(100% - 80px);
     background: url(../../src/assets/images/bg2.png);
-    background-repeat: round;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
   }
