--- a/src/app/components/admin/apartments/apartments-delete/apartments-delete.component.html
+++ b/src/app/components/admin/apartments/apartments-delete/apartments-delete.component.html
@@ -1,5 +1,9 @@
 <h1 mat-dialog-title>Czy jesteś pewny ?</h1>
-<div mat-dialog-content>Czy na pewno usunąć lokal: {{data.street}} {{data.buildingnumber}}/{{data.apartmentnumber}} ?</div>
+<div mat-dialog-content>
+  <p>Ulica: {{data.street}}</p>
+  <p>Numer Budynku: {{data.buildingnumber}}</p>
+  <p>Numer Mieszkania: {{data.apartmentnumber}}</p>
+</div>
 <div mat-dialog-actions align="end">
   <button mat-button [mat-dialog-close]="true">Oh nie!</button>
   <button mat-raised-button color="primary" (click)="onConfirm()" [mat-dialog-close]="true">Tak, proszę</button>
