--- a/src/app/components/admin/apartments/apartments.component.html
+++ b/src/app/components/admin/apartments/apartments.component.html
@@ -1,21 +1,16 @@
 <div class="container-fluid mt-5">
 
 
-    <div class="row">
-  <div class="col-6 justify-content-md-center ">
-      <mat-form-field class="search-panel" fxFlex="60">
-        <input #box matInput type="text" (keyup)="doFilter(box.value)" placeholder="Wyszukaj..">
-      </mat-form-field>
-  
+    <div class="row my-4" fxFlexLayout="row" fxFlexLayout.xs="column" fxLayoutGap.xs="20">
+      <div fxFlex="60" fxLayoutAlign="center">
+          <mat-form-field class="search-panel" fxFlex="50" fxFlex.xs>
+            <input #box matInput type="text" (keyup)="doFilter(box.value)" placeholder="Wyszukaj..">
+          </mat-form-field>
+        </div>
+        <div fxFlex fxLayoutAlign="center center">
+              <a mat-raised-button color="primary" (click)="addApartment()"><mat-icon aria-hidden="false" aria-label="person_add">person_add</mat-icon> Dodaj Mieszkanie</a>
+        </div>
     </div>
-  
-    <div class="col-6 text-center">
-      <a mat-raised-button color="primary" (click)="addApartment()"><mat-icon aria-hidden="false" aria-label="person_add">meeting_room</mat-icon> Dodaj Mieszkanie</a>
-  </div>
-  
-  
-  </div>
-  
     <div class="col-12">
       <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort>
@@ -57,25 +52,27 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Kod Pocztowy </th>
             <td mat-cell *matCellDef="let element"> {{element.postcode}} </td>
           </ng-container>
-          
+
           <ng-container matColumnDef="edit">
-            <th mat-header-cell *matHeaderCellDef> Edytuj </th>
+            <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
-              <button mat-icon-button color="primary" (click)="redirectToEdit(element)">
-                <mat-icon class="mat-18">mode_edit</mat-icon>
+              <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                <mat-icon>more_vert</mat-icon>
               </button>
+              <mat-menu #menu="matMenu">
+                <button mat-menu-item (click)="redirectToEdit(element)">
+                  <mat-icon>edit</mat-icon>
+                  <span>Edytuj</span>
+                </button>
+                <button mat-menu-item (click)="redirectToDelete(element)">
+                  <mat-icon>delete</mat-icon>
+                  <span>Usuń</span>
+                </button>
+              </mat-menu> 
             </td>
           </ng-container>
-  
-          <ng-container matColumnDef="delete">
-            <th mat-header-cell *matHeaderCellDef> Usuń </th>
-            <td mat-cell *matCellDef="let element">
-              <button mat-icon-button color="warn" (click)="redirectToDelete(element)">
-                <mat-icon class="mat-18">delete</mat-icon>
-              </button>
-            </td>
-          </ng-container>
-      
+
+          
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       
