--- a/src/app/components/admin/payments/payments-add/payments-add.component.html
+++ b/src/app/components/admin/payments/payments-add/payments-add.component.html
@@ -31,6 +31,17 @@
               </mat-select>
             </mat-form-field>
           </div>
+
+        </div>
+        <div class="row">
+          <div class="col">
+            <mat-form-field appearance="fill">
+              <mat-label>Data zatwierdzenia wpłaty</mat-label>
+              <input formControlName="date" matInput [matDatepicker]="picker">
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+          </div>
         </div>
         <div>
           <button mat-button matStepperNext>Przejdź dalej</button>
