--- a/src/app/components/admin/payments/payments-edit/payments-edit.component.html
+++ b/src/app/components/admin/payments/payments-edit/payments-edit.component.html
@@ -1,1 +1,61 @@
-<p>payments-edit works!</p>
+<mat-stepper orientation="vertical" [linear]="true" #stepper>
+  <mat-step [stepControl]="firstFormGroup">
+    <form [formGroup]="firstFormGroup">
+      <ng-template matStepLabel>Edytuj Płatność</ng-template>
+      <div class="row my-3">
+        <div class="col-3">
+
+            <mat-form-field appearance="fill">
+              <mat-label>Użytkownik</mat-label>
+              <mat-select formControlName="user" (selectionChange)="selectUser($event)" placeholder="Wybierz użytkownika" required>
+                <mat-option *ngFor="let user of users" [value]="user">{{user.name}} {{user.lastname}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <mat-form-field appearance="fill" floatLabel="always">
+            <mat-label>Kwota</mat-label>
+            <input formControlName="price" matInput type="number" step="0.01" min="0.00" oninput="validity.valid||(value='');" class="example-right-align" placeholder="0,00">
+            <span matPrefix>zł&nbsp;</span>
+          </mat-form-field>
+        </div>
+        <div class="col">
+          <mat-form-field appearance="fill">
+            <mat-label>RODZAJ</mat-label>
+            <mat-select formControlName="status">
+              <mat-option *ngFor="let f of form" [value]="f.label">
+                {{f.label}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col">
+          <mat-form-field appearance="fill">
+            <mat-label>Data zatwierdzenia wpłaty</mat-label>
+            <input formControlName="date" matInput [matDatepicker]="picker">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+        </div>
+      </div>
+      <div>
+        <button mat-button matStepperNext>Przejdź dalej</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step>
+    <ng-template matStepLabel>Finalizacja</ng-template>
+    <div class="row my-4">
+      <p>Czy dodać obecną płatność ?</p>
+    </div>
+    <div>
+      <button mat-button matStepperPrevious>Cofnij</button>
+      <button mat-button color="warn" (click)="editPayment()">Edytuj Płatność</button>
+    </div>
+  </mat-step>
+</mat-stepper>
