--- a/src/app/components/admin/raports/raports.component.html
+++ b/src/app/components/admin/raports/raports.component.html
@@ -1,14 +1,13 @@
 <div class="container-fluid mt-5">
 
 
-    <div class="row">
-  <div class="col-6 justify-content-md-center">
+    <div class="row mb-3">
+       <div class="col-6 justify-content-md-center">
       <mat-form-field class="search-panel" fxFlex="60">
         <input #box matInput type="text" (keyup)="doFilter(box.value)" placeholder="Wyszukaj..">
       </mat-form-field>
   
     </div>
-  
   </div>
   
     <div class="col-12">
@@ -45,27 +44,26 @@
             <th mat-header-cell *matHeaderCellDef> Do zapłaty</th>
             <td mat-cell *matCellDef="let element"><span *ngIf="element.sum">{{element.sum}} zł</span></td>
           </ng-container>
-        
-        
-          <ng-container matColumnDef="accept">
-            <th mat-header-cell *matHeaderCellDef>Akceptacja</th>
+
+
+          <ng-container matColumnDef="edit">
+            <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
-              <button mat-icon-button (click)="acceptRaport(element.uid)">
-                <mat-icon class="mat-18">verified</mat-icon>
+              <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                <mat-icon>more_vert</mat-icon>
               </button>
+              <mat-menu #menu="matMenu">
+                <button mat-menu-item (click)="redirectToDelete(element)">
+                  <mat-icon>delete</mat-icon>
+                  <span>Usuń</span>
+                </button>
+                <button mat-menu-item >
+                  <mat-icon>visibility</mat-icon>
+                  <span>Wyświetl Więcej</span>
+                </button>
+              </mat-menu> 
             </td>
           </ng-container>
-
-          <ng-container matColumnDef="delete">
-            <th mat-header-cell *matHeaderCellDef>Usuń</th>
-            <td mat-cell *matCellDef="let element">
-              <button mat-icon-button color="warn" (click)="redirectToDelete(element)">
-                <mat-icon class="mat-18">delete</mat-icon>
-              </button>
-            </td>
-          </ng-container>
-
-          
         
       
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
