--- a/src/app/components/admin/users/users.component.html
+++ b/src/app/components/admin/users/users.component.html
@@ -21,9 +21,8 @@
           <!-- Position Column -->
           <ng-container matColumnDef="position">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Pozycja </th>
-            <td mat-cell *matCellDef="let element; let i = index">{{element.index}}</td>
+            <td mat-cell *matCellDef="let element; let i = index">{{i+1}}</td>
           </ng-container>
-        
         
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Imię </th>
@@ -77,26 +76,27 @@
           </ng-container>
     
           
-            
-            <ng-container matColumnDef="edit">
-                <th mat-header-cell *matHeaderCellDef> Edytuj </th>
-                <td mat-cell *matCellDef="let element">
-                  <button mat-icon-button color="primary" (click)="redirectToEdit(element)">
-                      <mat-icon class="mat-18">mode_edit</mat-icon>
-                  </button>
-                </td>
-              </ng-container>
-    
-      
-              <ng-container matColumnDef="delete">
-                  <th mat-header-cell *matHeaderCellDef> Usuń </th>
-                  <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button color="warn" (click)="redirectToDelete(element)">
-                        <mat-icon class="mat-18">delete</mat-icon>
-                    </button>
-                  </td>
-                </ng-container>
-        
+          
+          <ng-container matColumnDef="edit">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+              <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                <mat-icon>more_vert</mat-icon>
+              </button>
+              <mat-menu #menu="matMenu">
+                <button mat-menu-item (click)="redirectToEdit(element)">
+                  <mat-icon>edit</mat-icon>
+                  <span>Edytuj</span>
+                </button>
+                <button mat-menu-item (click)="redirectToDelete(element)">
+                  <mat-icon>delete</mat-icon>
+                  <span>Usuń</span>
+                </button>
+              </mat-menu> 
+            </td>
+          </ng-container>
+
+       
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       
