--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,11 +1,8 @@
 .dashboard-panel {
-    padding: 20px;
+    padding: 5px 15px 15px 5px;
     background-color: #f2f2f2;
-    color: #737373;
-    font-size: 16px;
-    border: 1px solid #bdbdbd;
-    border-radius: 20px;
-    box-shadow: 5px 5px 5px rgba(0,0,0,0.3);
+    font-size: 14px;
+    box-shadow: 5px 5px 5px rgb(0 0 0 / 30%);
 
     img {
         padding: 12px;
@@ -13,9 +10,11 @@
         max-width: 80px;
     }
 
-    .desc {
-        margin-left: 10px;
+    h2 {
+        margin: 2%;
+        color: #ff9c3f;
     }
+
 }
 
 mat-icon {
