--- a/src/app/components/user/user-raports/user-raports.component.html
+++ b/src/app/components/user/user-raports/user-raports.component.html
@@ -1,1 +1,77 @@
-<p>user-raports works!</p>
+
+<div class="container-fluid mt-5">
+
+    <div class="row my-4" fxFlexLayout="row" fxFlexLayout.xs="column" fxLayoutGap.xs="20">
+      <div fxFlex="60" fxLayoutAlign="center">
+        <mat-form-field class="search-panel" fxFlex="50" fxFlex.xs>
+          <input #box matInput type="text" (keyup)="doFilter(box.value)" placeholder="Wyszukaj..">
+        </mat-form-field>
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="col">
+      <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort>
+    
+          <!-- Position Column -->
+          <ng-container matColumnDef="position">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Numer Faktury </th>
+            <td mat-cell *matCellDef="let element">#{{element.number}}</td>
+          </ng-container>
+        
+            <ng-container matColumnDef="fullname">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Wystawione na </th>
+              <td mat-cell *matCellDef="let element"> {{element.user.name}} {{element.user.lastname}}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="price">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Do zapłaty </th>
+              <td mat-cell *matCellDef="let element"> {{element.sum}} zł</td>
+            </ng-container>
+
+              <ng-container matColumnDef="createdAt">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Data wystawienia </th>
+                <td mat-cell *matCellDef="let element"> {{element.createdAt.seconds*1000 | date: 'dd/MM/YYYY'}}</td>
+              </ng-container>
+
+              <ng-container matColumnDef="scope">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Okres </th>
+                <td mat-cell *matCellDef="let element"> {{element.startdate.seconds*1000 | date: 'dd/MM/YYYY'}} - {{element.enddate.seconds*1000 | date: 'dd/MM/YYYY'}}</td>
+              </ng-container>
+
+              
+
+              <ng-container matColumnDef="edit">
+                  <th mat-header-cell *matHeaderCellDef></th>
+                  <td mat-cell *matCellDef="let element">
+                    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                      <mat-icon>more_vert</mat-icon>
+                    </button>
+                    <mat-menu #menu="matMenu">
+                      <button mat-menu-item (click)="GeneratePDF(element)">
+                        <mat-icon fas fa-clipboard-check>edit</mat-icon>
+                        <span>Exportuj</span>
+                      </button>
+                      <button mat-menu-item (click)="showDetail(element)">
+                        <mat-icon>visibility</mat-icon>
+                        <span>Wyświetl</span>
+                      </button>
+                    </mat-menu> 
+                  </td>
+                </ng-container>
+        
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      
+          </table>
+        
+          <mat-paginator [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons aria-label="Select page of periodic elements">
+          </mat-paginator>
+        </div>
+    
+      </div>
+     
+    </div>
+</div>
+
