--- a/src/app/components/admin/payments/payments.component.html
+++ b/src/app/components/admin/payments/payments.component.html
@@ -18,33 +18,33 @@
       <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort>
           <ng-container matColumnDef="position">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Pozycja </th>
-            <td mat-cell *matCellDef="let element">#{{element.index}}</td>
+            <th mat-header-cell *matHeaderCellDef> Pozycja </th>
+            <td mat-cell *matCellDef="let element">{{element.index}}</td>
           </ng-container>
 
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Imię </th>
-            <td mat-cell *matCellDef="let element"> {{element.user.name}}</td>
+            <td mat-cell *matCellDef="let element">{{element.name}}</td>
           </ng-container>
 
           <ng-container matColumnDef="lastname">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Nazwisko </th>
-            <td mat-cell *matCellDef="let element"> {{element.user.lastname}}</td>
+            <td mat-cell *matCellDef="let element">{{element.lastname}}</td>
           </ng-container>
 
           <ng-container matColumnDef="price">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Kwota Wpłaty </th>
-            <td mat-cell *matCellDef="let element"> {{element.price}} zł</td>
+            <td mat-cell *matCellDef="let element">{{element.price}} zł</td>
           </ng-container>
 
           <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-            <td mat-cell *matCellDef="let element"> {{element.status}}</td>
+            <td mat-cell *matCellDef="let element">{{element.status}}</td>
           </ng-container>
 
           <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Zaksięgowano </th>
-            <td mat-cell *matCellDef="let element"> {{element.date.seconds*1000 | date: 'dd/MM/YYYY'}}</td>
+            <td mat-cell *matCellDef="let element">{{element.date.seconds*1000 | date: 'dd/MM/YYYY'}}</td>
           </ng-container>
 
           <ng-container matColumnDef="edit">
