--- a/src/app/components/admin/users/users.component.html
+++ b/src/app/components/admin/users/users.component.html
@@ -8,9 +8,8 @@
           </mat-form-field>
         </div>
         <div fxFlex fxLayoutAlign="center center">
-              <a mat-raised-button color="primary" (click)="addUser()"><mat-icon aria-hidden="false" aria-label="person_add">person_add</mat-icon> Dodaj Mieszkańca</a>
+              <a mat-raised-button color="primary" (click)="redirectAddUser()"><mat-icon aria-hidden="false" aria-label="person_add">person_add</mat-icon> Dodaj Mieszkańca</a>
         </div>
-      
     </div>
     
     <div class="row">
@@ -18,7 +17,6 @@
       <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort>
     
-          <!-- Position Column -->
           <ng-container matColumnDef="position">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Pozycja </th>
             <td mat-cell *matCellDef="let element; let i = index">{{i+1}}</td>
@@ -61,8 +59,6 @@
               <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
             </ng-container>
     
-    
-            
             <ng-container matColumnDef="admin">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Moderator </th>
                 <td mat-cell *matCellDef="let element"><span *ngIf="element.moderator; else noadmin">Tak</span></td>
